# url-summarizer-streamlit

./: .env.example  .gitignore  main.py  pyproject.toml
