[project]
name = "url-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langchain-yt-dlp>=0.0.8",
    "pyngrok>=7.2.12",
    "pytube>=15.0.0",
    "streamlit>=1.47.0",
    "unstructured>=0.18.9",
    "validators>=0.35.0",
    "youtube-transcript-api>=1.1.1",
]
